...
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/search_edit_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:background="@drawable/bg_round_corner"
                android:inputType="text"
...
                android:hint="@string/search_query_hint"
                android:importantForAutofill="no" >
                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/search_button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/colorAccent"
                android:text="@string/search_button"
                style="?android:attr/borderlessButtonStyle"/>
...
