<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/read_menu_edit"
        android:orderInCategory="1"
        android:title="@string/menu_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/read_menu_delete"
        android:orderInCategory="2"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

</menu>
