...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add" />

...
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/main_no_memo"
            android:fontFamily="@font/nanum_gothic_bold"
            android:textSize="23sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_recycler_memo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_appbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

...
