<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/read_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/read_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:id="@+id/read_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_gothic_bold"
                android:textSize="17sp"
                android:textColor="@color/colorWhite" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/read_appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/read_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:background="@drawable/bg_round_corner"
            android:textSize="17sp"
            android:textColor="#222222"
            android:maxLines="1"
            android:fontFamily="@font/nanum_gothic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/read_recycler_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/read_text_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/bg_round_corner"
            android:gravity="start"
            android:textSize="17sp"
            android:textColor="#222222"
            android:fontFamily="@font/nanum_gothic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
