<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/write_menu_gallery"
        android:orderInCategory="1"
        android:title="@string/menu_gallery"
        android:icon="@drawable/ic_gallery"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/write_menu_camera"
        android:orderInCategory="2"
        android:title="@string/menu_camera"
        android:icon="@drawable/ic_camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/write_menu_url"
        android:orderInCategory="3"
        android:title="@string/menu_url"
        android:icon="@drawable/ic_url"
        app:showAsAction="ifRoom" />

</menu>
