...
        app:layout_constraintTop_toBottomOf="@id/write_appbar"
        app:layout_constraintBottom_toTopOf="@id/write_navigation_image"
        android:padding="15dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/write_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:background="@drawable/bg_round_corner"
            android:inputType="text"
...
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/write_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/bg_round_corner"
            android:gravity="start"
...
